--- a/news/templates/news/detail.html
+++ b/news/templates/news/detail.html
@@ -8,11 +8,15 @@
 </div>
 <p></p>
 <div class="row pt-3">
+  {% if news.image %}
   <div class="col-8">
+
     <img src="{{ news.image.url }}" class="img-fluid" />
+
   </div>
+  {% endif %}
   <div class="col-4">
-    <a href="javascript:{document.getElementById('love{{ news.id }}').submit()}"><button class="btn btn-danger btn-sm"> <span class="oi oi-heart"></span> {{ news.votes_total }}</button></a>
+    <a href="javascript:{document.getElementById('love1{{ news.id }}').submit()}"><button class="btn btn-danger btn-sm"> <span class="oi oi-heart"></span> {{ news.votes_total }}</button></a>
   </div>
 </div>
 <p></p>
@@ -32,7 +36,7 @@
   </div>
 </div>
 
-<form action="{% url 'love' news.id %}" method="POST" id="love{{ news.id }}">
+<form action="{% url 'love1' news.id %}" method="POST" id="love1{{ news.id }}">
   {% csrf_token %}
   <input type="hidden">
 </form>
